fix: entity modal tab name overflowing out of modal (#17832)

--- a/src/modules/10-common/components/EntityReference/EntityReference.module.scss
+++ b/src/modules/10-common/components/EntityReference/EntityReference.module.scss
@@ -13,7 +13,7 @@
     border-bottom: 1px solid var(--grey-200);
 
     .tabValue {
-      max-width: 150px;
+      max-width: 130px;
     }
 
     .tabIcon {
